--- a/Tasks/CondaEnvironmentV0/package.json
+++ b/Tasks/CondaEnvironmentV0/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@types/node": "^6.0.101",
     "@types/q": "^1.5.0",
-    "vsts-task-lib": "^2.4.0",
-    "vsts-task-tool-lib": "^0.8.1"
+    "azure-pipelines-task-lib": "^2.9.3",
+    "azure-pipelines-tool-lib": "^0.12.0"
   }
 }
