--- a/Tasks/CondaEnvironmentV1/package.json
+++ b/Tasks/CondaEnvironmentV1/package.json
@@ -19,6 +19,6 @@
   "dependencies": {
     "@types/node": "^6.0.101",
     "@types/q": "^1.5.0",
-    "vsts-task-lib": "^2.4.0"
+    "azure-pipelines-task-lib": "^2.9.3"
   }
 }
