--- a/Tasks/KubernetesV1/package.json
+++ b/Tasks/KubernetesV1/package.json
@@ -7,20 +7,20 @@
     "@types/del": "^2.2.0",
     "@types/glob": "^5.0.10",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/q": "^1.5.0",
     "@types/uuid": "^8.3.0",
     "agent-base": "^6.0.2",
-    "azure-pipelines-task-lib": "^4.16.0",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
     "azure-pipelines-tasks-docker-common": "2.268.0",
-    "azure-pipelines-tasks-kubernetes-common": "^2.252.0",
+    "azure-pipelines-tasks-kubernetes-common": "^2.267.0",
     "azure-pipelines-tasks-utility-common": "3.267.0",
     "azure-pipelines-tool-lib": "^2.0.10",
     "del": "2.2.0",
     "moment": "^2.29.4"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
