fixed vulnerabilities in azure function app v1 &v2

--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "node-uuid": "1.4.6",
     "nodejs-file-downloader": "^4.11.1",
     "nyc": "^15.1.0",
+    "pnpm": "^10.28.1",
     "q": "1.4.1",
     "semver": "5.7.2",
     "shelljs": "^0.8.5",
     "typed-rest-client": "^1.8.9",
     "typescript": "4.0.2",
-    "validator": "^13.7.0",
-    "pnpm": "^10.13.1"
+    "validator": "^13.7.0"
   }
 }
