--- a/Tasks/AzureFunctionAppV2/package.json
+++ b/Tasks/AzureFunctionAppV2/package.json
@@ -37,6 +37,10 @@
     "typescript": "5.1.6"
   },
   "overrides": {
-    "form-data": "^4.0.4"
+    "form-data": "^4.0.4",
+    "qs": "^6.14.1",
+    "tough-cookie": "^4.1.4",
+    "lodash": "^4.17.21",
+    "xml2js": "^0.6.2"
   }
 }
